--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Vlad Liakhovskyi"
+            "name": "BladL"
         }
     ],
     "keywords": ["SMS Fly","SMS-fly API"],
